--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
     "@types/jest": "^26.0.21",
     "@types/node": "^14.14.35",
     "jest": "^26.6.3",
@@ -16,6 +18,8 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
     "pg": "^8.5.1",
     "typeorm": "^0.2.31"
   }
